syntax = "proto3";

package user_service_user;
option go_package = "./user_service_user";

// Service interface.
service User {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

// request: GetUserRequest
message GetUserRequest {
  int32 Id = 1;
}

// response: GetUserResponse
message GetUserResponse {
  int32 Id = 1;
  string FirstName = 2;
  string LastName = 3;

}

// request: CreateUserRequest
message CreateUserRequest {
  bytes UUID = 1;
}

// response: CreateUserResponse
message CreateUserResponse {
  int32 Id = 1;
}